backend fixed swagger endpoints full methods
